@@ -30,7 +30,7 @@ use DynaLoader ();
 use Carp;
 
 use vars   qw( $VERSION @ISA );
-$VERSION = "0.51";
+$VERSION = "0.52";
 @ISA     = qw( DynaLoader );
 
 sub PV { 0 }
@@ -416,15 +416,15 @@ sub column_names
     if (@keys == 1 && ref $keys[0] eq "ARRAY") {
 	@keys = @{$keys[0]};
 	}
-    elsif (join "", map { defined $_ ? ref $_ : "UNDEF" } @keys) {
+    elsif (join "", map { defined $_ ? ref $_ : "" } @keys) {
 	croak ($self->SetDiag (3001));
 	}
 
-    $self->{_is_bound} && @keys != $self->{_is_bound} and
+    $self->{_BOUND_COLUMNS} && @keys != @{$self->{_BOUND_COLUMNS}} and
 	croak ($self->SetDiag (3003));
 
-    $self->{_COLUMN_NAMES} = [ @keys ];
-    @keys;
+    $self->{_COLUMN_NAMES} = [ map { defined $_ ? $_ : "\cAUNDEF\cA" } @keys ];
+    @{$self->{_COLUMN_NAMES}};
     } # column_names
 
 sub bind_columns
@@ -445,7 +445,7 @@ sub bind_columns
     $self->_set_attr_N ("_is_bound", scalar @refs);
     $self->{_BOUND_COLUMNS} = [ @refs ];
     @refs;
-    } # column_names
+    } # bind_columns
 
 sub getline_hr
 {
@@ -990,6 +990,16 @@ single array_ref, so you can pass C<getline ()>
 
   $csv->column_names ($csv->getline ($io));
 
+C<column_names ()> does B<no> checking on duplicates at all, which might
+lead to unwanted results. Undefined entries will be replaced with the
+string C<"\cAUNDEF\cA">, so
+
+  $csv->column_names (undef, "", "name", "name");
+  $hr = $csv->getline_hr ($io);
+
+Will set C<$hr->{"\cAUNDEF\cA"}> to the 1st field, C<$hr->{""}> to the
+2nd field, and C<$hr->{name}> to the 4th field, discarding the 2rd field.
+
 C<column_names ()> croaks on invalid arguments.
 
 =head2 bind_columns
@@ -1250,14 +1260,12 @@ internal failure, like failing to store a hash value.
 
 =item More Errors & Warnings
 
-At current, it is hard to tell where or why an error occured (if
-at all). New extensions ought to be clear and concise in reporting
-what error occurred where and why, and possibly also tell a remedy
-to the problem. error_diag is a (very) good start, but there is more
-work to be done here.
+New extensions ought to be clear and concise in reporting what error
+occurred where and why, and possibly also tell a remedy to the problem.
+error_diag is a (very) good start, but there is more work to be done here.
 
-Basic calls should croak or warn on illegal parameters. Errors
-should be documented.
+Basic calls should croak or warn on illegal parameters. Errors should be
+documented.
 
 =item eol
 
